gccida/c0/dwarf2out_end_epilogue
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_end_epilogue/src/dwarf2out.c:2595:43: error: use of undeclared identifier 'off_7F9875'
sprintf( label, "*.%s%u", ( const char *)&off_7F9875, current_funcdef_number); 
                                          ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_end_epilogue/src/obj/dwarf2out.o] Error 1
